Bug 1388192 - Drop result principal URI from a cloned session history entry when opening view-source: page. r=bz, a=gchang

--HG--
extra : source : 164240dd108df3cd7b3a3cb683511781c3577fbb